# ndswin-jax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TASK_COMPLETION_SUMMARY.md  VERIFICATION_REPORT.md  create_synthetic_data.py  environment.yml  evaluate.py  loader.py  loader_synthetic.py  pyproject.toml  requirements.txt  train.py  train_synthetic.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
configs/: README.md  __init__.py  cifar10.json  cifar100.json  cifar100.py  cifar100_test.py  cifar100_tuned.json  cifar10_tuned.json  medseg_task01.json  modelnet10.json  modelnet40.json  modelnet40.py  modelnet40_test.py
configs/queues/: benchmark_2d_then_3d.yaml  example_queue.yaml  queue_2d_3d.yaml  queue_2d_true_modelnet10.yaml
configs/sweeps/: cifar100_hyperparam_sweep.yaml  cifar100_tuned_hyperparam_sweep.yaml  cifar10_hyperparam_sweep.yaml  cifar10_tuned_hyperparam_sweep.yaml  medseg_task01_hyperparam_sweep.yaml  modelnet10_hyperparam_sweep.yaml  modelnet40_hyperparam_sweep.yaml  modelnet40_stable_hyperparam_sweep.yaml
docs/: api.md  conf.py  configuration.md  index.rst  inference.md  installation.md  quickstart.md  training.md
practical_artifacts/2026-03-27/: README.md
practical_artifacts/2026-03-27/cifar10/: best_cifar10_cifar10_0f80c648_20260327_203226_trial013.json  metrics.json  summary.json
practical_artifacts/2026-03-27/modelnet40/: best_volume_folder_modelnet40_3e7c8e4f_20260327_222840_trial001.json  metrics.json  summary.json
practical_artifacts/2026-03-27/queue/: queue_20260327_182744.json
report/: .gitignore  Makefile  README.md  THIRD_PARTY.md  extract_report_data.py  jkureport.sty  main-report.tex  references.bib
report/data/: cifar100_sweep.csv  cifar100_training.csv  cifar10_sweep.csv  cifar10_training.csv  modelnet40_sweep_invalid.csv  modelnet40_sweep_success.csv  modelnet40_training.csv
report/data/sources/configs/auto_best/: best_cifar100_cifar100_tuned_a9ef3d19_20260520_040951_trial011.json  best_cifar10_cifar10_tuned_05f7e1b8_20260427_234823_trial003.json  best_cifar10_cifar10_tuned_07366165_20260331_090657_trial022.json  best_volume_folder_modelnet40_e548c891_20260429_164145_trial011.json
report/data/sources/data/modelnet40/: dataset_manifest.json
report/data/sources/logs/: queue_20260330_174711.json  queue_20260427_214146.json
report/data/sources/outputs/cifar10/cifar10_rngfix_retrain600_20260518/checkpoints/: metrics.json  test_metrics.json
report/data/sources/outputs/cifar10/cifar10_tuned_4b2313b9_20260401_032614/checkpoints/: metrics.json
report/data/sources/outputs/cifar10/cifar10_tuned_8021c956_20260429_064522/checkpoints/: metrics.json
report/data/sources/outputs/cifar100/cifar100_tuned_0fd87157_20260520_112244/checkpoints/: metrics.json  test_metrics.json
report/data/sources/outputs/sweeps/cifar100_tuned_hyperparam_sweep_fixed_20260519/: summary.json
report/data/sources/outputs/sweeps/cifar10_tuned_hyperparam_sweep/: summary.json
report/data/sources/outputs/sweeps/modelnet40_stable_hyperparam_sweep/: summary.json
report/data/sources/outputs/volume_folder/modelnet40_f67c9398_20260401_060749/checkpoints/: metrics.json
report/data/sources/outputs/volume_folder/modelnet40_f67c9398_20260429_165927/checkpoints/: metrics.json  test_metrics.json
report/figures/: architecture_overview.tex  cifar100_sweep_plot.tex  cifar100_training_plot.tex  cifar10_sweep_plot.tex  cifar10_training_plot.tex  modelnet40_sweep_plot.tex  modelnet40_training_plot.tex
report/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-methods.tex  04-experimental-setup.tex  05-results.tex  06-limitations-conclusion.tex
src/: __init__.py
src/layers/: __init__.py  patching.py  positional.py  swin.py
src/layers/attention/: __init__.py  masking.py  relative.py  window.py
src/models/: __init__.py  classifier.py
src/ndswin/: __init__.py  cli.py  config.py  py.typed  types.py
src/ndswin/core/: __init__.py  attention.py  blocks.py  patch_embed.py  utils.py  window_ops.py
src/ndswin/inference/: __init__.py  batch_processor.py  export.py  predictor.py
src/ndswin/models/: __init__.py  classifier.py  pretrained.py  swin.py
src/ndswin/training/: __init__.py  augmentation.py  checkpoint.py  data.py  losses.py  metrics.py  optimizer.py  scheduler.py  trainer.py
src/ndswin/utils/: __init__.py  device.py  gpu.py  logging.py  reproducibility.py  visualization.py
src/utils/: __init__.py  mlp.py  stochastic.py  typing.py
tests/: __init__.py  conftest.py  test_attention.py  test_augmentation.py  test_augmentation_integration.py  test_augmentation_randaugment.py  test_auto_sweep.py  test_blocks.py  test_checkpoint.py  test_cli.py  test_config.py  test_data_loaders.py  test_dataset_generalization.py  test_deployment.py  test_device.py  test_environment_config.py  test_gpu.py  test_inference.py  test_integration.py  test_logging.py  test_makefile_targets.py  test_models.py  test_nd_architecture.py  test_pipeline_stability.py  test_queue_runner.py  test_report_extraction.py  test_reproducibility.py  test_safety.py  test_sweep.py  test_train.py  test_training.py  test_utils.py  test_window_ops.py
train/: auto_sweep_and_train.py  fetch_hf_dataset.py  queue_runner.py  run_sweep.py  train.py  train_cifar100.py
training/: __init__.py  augmentation.py  checkpointing.py  config.py  lr_schedule.py  state.py  trainer.py
