[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndswin-jax"
version = "0.1.0"
description = "ND-Swin Transformer implementation in JAX"
readme = "README.md"
requires-python = ">=3.8"
