[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndswin-jax"
version = "0.1.0"
description = "N-Dimensional Swin Transformer implementation in JAX/Flax"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "NDSwin-JAX Authors", email = "contact@example.com"},
]
maintainers = [
    {name = "NDSwin-JAX Authors", email = "contact@example.com"},
]
keywords = [
    "deep-learning",
    "jax",
    "flax",
    "transformer",
    "swin-transformer",
    "computer-vision",
    "n-dimensional",
    "medical-imaging",
    "video-classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    "jax==0.7.1",
    "jaxlib==0.7.1",
    "flax>=0.10.0",
    "optax>=0.2.0,<0.3.0",
    "orbax-checkpoint>=0.10.0",
    "numpy>=1.24,<2.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "chex>=0.1.90",
    "datasets>=2.0",
    "pyarrow",
    "huggingface-hub",
    "nibabel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
]
training = [
    "tensorboard>=2.14",
]
gpu = [
    "jax[cuda12_pip]==0.7.1",
    "jax-cuda12-plugin==0.7.1",
    "jax-cuda12-pjrt==0.7.1",
    "nvidia-cuda-nvcc-cu12",
]
all = [
    "ndswin-jax[dev,docs,training,gpu]",
]

[project.urls]
Homepage = "https://github.com/your-org/ndswin-jax"
Documentation = "https://ndswin-jax.readthedocs.io"
Repository = "https://github.com/your-org/ndswin-jax.git"
Issues = "https://github.com/your-org/ndswin-jax/issues"
Changelog = "https://github.com/your-org/ndswin-jax/blob/main/CHANGELOG.md"

[project.scripts]
ndswin = "ndswin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ndswin = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ndswin"]
known_third_party = ["jax", "flax", "optax", "numpy"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "flax.*",
    "optax.*",
    "chex.*",
    "orbax.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/ndswin"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM102", # nested if statements (sometimes clearer)
    "SIM108", # ternary operator (sometimes less readable)
    "SIM110", # use all() instead of for loop
    "SIM118", # dict.keys() is sometimes more explicit
    "B007",   # loop variable not used (intentional)
    "B904",   # raise from (sometimes not needed)
    "UP007",  # Union syntax (compatibility)
    "UP045",  # Optional syntax (compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"scripts/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["ndswin"]
known-third-party = ["jax", "flax", "optax", "numpy"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B311"]
